# task-optimiser-llm-public

./: README.md  justfile  pyproject.toml
data/: calendar_entries.csv  preferences.csv  tasks.csv
src/: langchain_client.py  langgraph_client.py  main.py  main_compare_client.py  model_client.py  ollama_manager.py  ollama_service.py  pydantic_ai_client.py
