[project]
name = "task-optimizer-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.7",
    "loguru>=0.7.3",
    "ollama>=0.4.7",
    "pydantic-ai>=0.2.11",
]
